# simple-auth0-fastapi-react-app

./: .gitignore  README.md  Readme.md  docker-compose.yml
.github/workflows/: test-suite.yml
backend/: pyproject.toml
backend/scripts/: run.sh  test.sh
backend/src/: auth0.py  config.py  dependencies.py  main.py  schema.py
backend/src/routes/: debug.py
backend/src/security/: token.py  token_tools.py
backend/tests/: conftest.py  test_me.py  test_ping.py  test_post_and_delete_user.py  test_private.py  test_private_scoped.py
frontend/: package.json
services/auth0/: README.md
services/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/backend/scripts/: install  run
services/backend/src/: config.py  main.py
services/backend/src/core/: config.py  dependencies.py
services/backend/src/routes/: token.py  user.py
services/backend/src/security/: funcs.py  oauth.py  token_tools.py
services/backend/tests/: conftest.py  test_debug.py  test_me.py  test_post_and_delete_user.py
services/frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
services/frontend/src/: App.js  index.js
services/frontend/src/components/landing_page/: LandingPage.js
services/frontend/src/components/login/: Login.css  Login.js
